<resources>
    <string name="app_name">trabalho_mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="colorAccent">#648866</color>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Property Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ads_all">Anúncios</string>
    <string name="menu_categories">Categorias</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_ads">Meus Anúncios</string>
    <string name="menu_properties">Meus imóveis</string>
    <string name="menu_login">Login</string>
    <string name="button">Button</string>
</resources>