<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ads_all"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_ads_all" />
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ads" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_properties" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
    </group>
</menu>