<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ads_all">

    <fragment
        android:id="@+id/nav_ads_all"
        android:name="com.example.trabalho_mobile.ui.anuncios.AnuncioFragment"
        android:label="@string/menu_ads_all"
        tools:layout="@layout/fragment_anuncio" />

    <fragment
        android:id="@+id/nav_ads"
        android:name="com.example.trabalho_mobile.ui.gallery.GalleryFragment"
        android:label="@string/menu_ads"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.trabalho_mobile.ui.slideshow.LoginFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_properties"
        android:name="com.example.trabalho_mobile.ui.imoveis.ImoveisFragment"
        android:label="@string/menu_properties"
        tools:layout="@layout/fragment_imoveis" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.trabalho_mobile.ui.category.CategoryFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.trabalho_mobile.ui.slideshow.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>